fix:indexh1 gaps in lettering fixed with .heading-span

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
     color: #ffffff;
     background-image: url("../../assets/images/background3.jpg");
     background-repeat: no-repeat;
+    background-attachment:fixed;
     background-size: cover;
     background-color: #2d2d2e;
     min-height: 100%;
@@ -60,7 +61,7 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #232429;
-    box-shadow: 0 1px 3px #00020b;
+    box-shadow: 0 2px 4px #00020b;
     margin: 20px 20px 20px 20px;
     border-radius: 10px;
     max-width: 100%;
@@ -123,19 +124,22 @@ footer p a:hover {
 /* main h1 title on landing page*/
 .home-center h1 {
     text-align: center;
-    font-size: 2.5rem;
+    font-size:0;
     font-weight: bold;
     margin-bottom: 6vh;
     margin-top: 6vh;
     padding-left: 5px;
     padding-right: 5px;
 }
+h1 .heading-span{
+    font-size: 3rem;
+}
 
 /*first p element on landing page*/
 .home-center .p1 {
     text-align: center;
     font-size: 1.5rem;
-    margin-top: 28vh;
+    margin-top: 18vh;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -144,7 +148,7 @@ footer p a:hover {
 .home-center .p2 {
     text-align: center;
     font-size: 1.5rem;
-    margin-bottom: 28vh;
+    margin-bottom: 3vh;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -214,9 +218,12 @@ footer p a:hover {
 
     /*increase font size and margin for medium screens home page*/
     .home-center h1 {
-        font-size: 4rem;
-        margin-top: 15vh;
+        font-size:0;
+        margin-top: 8vh;
     }
+    h1 .heading-span{
+    font-size: 5rem;
+}
 
     /* image alignment and i frame*/
     .wrapper img {
@@ -238,17 +245,20 @@ footer p a:hover {
 
     /*....................increase font size and margin for larger screens home page..............................*/
     .home-center h1 {
-        font-size: 8rem;
-        margin-top: 20vh;
+        font-size: 0;
+        margin-top: 10vh;
     }
+    h1 .heading-span{
+    font-size: 8rem;
+}
 
     .home-center .p1 {
         margin-top: 20vh;
-        margin-bottom: 10vh;
+        margin-bottom: 5vh;
     }
 
     .home-center .p2 {
-        margin-bottom: 25vh;
+        margin-bottom: 5vh;
     }
 
     /*...................sign up form container............................*/
@@ -313,15 +323,20 @@ footer p a:hover {
         align-items: center;
         padding: 25px 25px 25px 25px;
     }
+
+    .wrapper-form{
+        width:50%;
+
+    }
 }
 
-/* <-- Add this closing bracket to end the previous @media block */
+
 /*media query for min width 1600px*/
 @media only screen and (min-width: 1600px) {
 
     /*home page*/
     .home-center .p2 {
-        margin-bottom: 35vh;
+        margin-bottom: 10vh;
     }
 
     /*about keto page*/
@@ -334,14 +349,14 @@ footer p a:hover {
     }
 
     .wrapper {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         margin-left: 50px;
         margin-right: 50px;
     }
 
     /*recipe page*/
     .wrapper2 {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         margin-left: 50px;
         margin-right: 50px;
     }
@@ -368,16 +383,20 @@ footer p a:hover {
 
     /*home page*/
     .home-center .p2 {
-        margin-bottom: 30vh;
+        margin-bottom: 10vh;
     }
 
     .home-center h1 {
-        font-size: 10rem;
-        margin-top: 15vh;
+        font-size: 0;
+        margin-top: 8vh;
     }
 
+    h1 .heading-span{
+    font-size: 12rem;
+}
+
     .home-center .p1 {
-        font-size: 2rem;
+        font-size: 1.2rem;
         margin-top: 30vh;
     }
 
@@ -391,7 +410,7 @@ footer p a:hover {
     }
 
     .wrapper {
-        font-size: 2rem;
+        font-size: 1.2rem;
         margin-left: 100px;
         margin-right: 100px;
         margin-bottom: 15vh;
@@ -399,7 +418,7 @@ footer p a:hover {
 
     /*recipe page*/
     .wrapper2 {
-        font-size: 2rem;
+        font-size: 1.2rem;
         margin-left: 100px;
         margin-right: 100px;
     }
@@ -417,6 +436,6 @@ footer p a:hover {
         padding-bottom: 20px;
         padding-left: 5px;
         padding-right: 5px;
-        font-size: 2rem;
+        font-size: 1.2rem;
     }
 }
